--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body {font-size:16px;}
 
 <hr style="height:100pt; visibility:hidden;" />
 	 <div class="w3-container" style="margin-top:80px" id="product">
-    <h2 class="w3-xxxlarge bluefellow">Product.</h2>
+    <h2 class="w3-xxxlarge bluefellow">Product</h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
 </div>
   
@@ -104,32 +104,21 @@ body {font-size:16px;}
   <div class="w3-row-padding">
     <div class="w3-half">
       
- 
-      <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
+ <div class:"container" >
+      <img class="round" src="images/product/charge.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
+	  </div>
+		
+		<p align="justify"><br><br> With an easy payment of EUR15/month, Fellow support staff will install GoldView at your home and walk you through the ease of use of our product. Next to our installation services, our support team is available 24/7 on GoldView to help you out with any issues or questions that may arise. Everything for your comfort </p>
     </div>
 
     <div class="w3-half">
-      <img src="/w3images/atrium.jpg" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
-      <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
-      <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
-    </div>
-  </div>
-
-  <!-- Modal for full size images on click-->
-  <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
-    <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
-    <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-      <img id="img01" class="w3-image">
-      <p id="caption"></p>
-    </div>
-  </div>
-
- <div class="w3-container" id="packages" style="margin-top:75px">
-	 <img src="images/product/charge.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView charging dock">
-  <div class="w3-container" id="about" style="margin-top:75px">
-    <p> Introducing <b>Goldview. </b><br> Your personal device to contact your community and family in the click of a button. Video call with new friends currated to your preferences, interests and age. With a simple and straightforward design, this at home screen with it's charging dock, removes all the complications that the golden age can find on modern phones.<br><br>    <img src="images/product/product.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView"><br><br> With an easy payment of EUR15/month, Fellow support staff will install GoldView at your home and walk you through the ease of use of our product. Next to our installation services, our support team is available 24/7 on GoldView to help you out with any issues or questions that may arise. Everything for your comfort </p>
-</div>
-	</div>
+		    <h2 class="beigefellow" align="center" style="font-size: 100px"> Goldview </h2>
+		<br>
+		<p align="justify">  Your personal device to contact your community and family in the click of a button. Video call with new friends currated to your preferences, interests and age. With a simple and straightforward design, this at home screen with it's charging dock, removes all the complications that the golden age can find on modern phones.</p> 
+		<br>
+		<br>
+      <img src="images/product/product.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView">
+	  </div>
   <div class="w3-container" id="pay" style="margin-top:75px">
 	<div class="containerpay p-0 ">
         <div class="card px-4">
@@ -174,7 +163,7 @@ body {font-size:16px;}
 	
   <!-- Services -->
   <div class="w3-container" id="about" style="margin-top:75px">
-    <h2 class="w3-xxxlarge bluefellow"><b>About Us.</b></h2>
+    <h2 class="w3-xxxlarge bluefellow"><b>About Us</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
     <p>Fellow was founded by five Creative Business students who recognized the importance of social connections amongst seniors. The current growing online world we live in makes that the search and preservation of social connections not always come naturally anymore for elderly people. At Fellow, we are offering a helping hand for seniors in the digital environment. The platform and device we created provides an easy and accessible way for seniors to connect with others. Our mission is to bridge the gap between loneliness and community. </p>
 	 <hr style="border:5px solid " class="w3-round darkbeigefellow">
@@ -191,21 +180,21 @@ body {font-size:16px;}
     <div class="w3-half">
       
  	 <center><p><b>Connection</b></p></center>
- 	   <p>We believe that every senior should have access to meaningful connections. Our brand values the importance of human relationships and strives to provide an environment that fosters and maintains social connections.</p>
-	 <center><p><b>Simplicity</b></p></center> <p> We aim to make technology easy and accessible for seniors. Our brand values simplicity in all aspects of our product from the design to the user interface, to ensure that every user can easily connect with others.</p>
+ 	   <p align="justify">We believe that every senior should have access to meaningful connections. Our brand values the importance of human relationships and strives to provide an environment that fosters and maintains social connections.</p>
+	 <center><p><b>Simplicity</b></p></center> <p align="justify"> We aim to make technology easy and accessible for seniors. Our brand values simplicity in all aspects of our product from the design to the user interface, to ensure that every user can easily connect with others.</p>
     </div>
 
     <div class="w3-half">
-   	<center><p><b>Community</b></p></center> <p>  We understand that community is crucial for a fulfilling life. Our brand values the importance of creating a sense of belonging and inclusivity for all seniors who use our product.
+   	<center><p><b>Community</b></p></center> <p align="justify">  We understand that community is crucial for a fulfilling life. Our brand values the importance of creating a sense of belonging and inclusivity for all seniors who use our product.
 </p>
-		<center><p><b>Guidance</b></p></center> <p>We are committed to providing guidance and support to our users. Our brand values the importance of offering a helping hand to ensure that every user has a positive experience while using our product.</p>
+		<center><p><b>Guidance</b></p></center> <p align="justify">We are committed to providing guidance and support to our users. Our brand values the importance of offering a helping hand to ensure that every user has a positive experience while using our product.</p>
     </div>
   </div>
 		
 
   <!-- Designers -->
   <div class="w3-container" id="designers" style="margin-top:75px">
-    <h2 class="w3-xxxlarge bluefellow"><b>Your Fellow Team.</b></h2>
+    <h2 class="w3-xxxlarge bluefellow"><b>Your Fellow Team</b></h2>
     <hr style="width:50px;border:5px solid" class="w3-round darkbeigefellow">
     <p>The best team in the world.</p>
     <p>Fellow started off as a small university project. Followed with enough passion, hard work and a wish to help out our elderly, we were able to produce GoldView, finally achieving a dream of respect towards the golden age. Five colleagues now turned friends have made this possible through teamwork and communication.
@@ -273,7 +262,7 @@ body {font-size:16px;}
  
   <!-- Contact -->
   <div class="w3-container" id="contact" style="margin-top:75px">
-    <h2 class="w3-xxxlarge bluefellow"><b>Contact.</b></h2>
+    <h2 class="w3-xxxlarge bluefellow"><b>Contact</b></h2>
     <hr style="width:50px;border:5px solid" class="w3-round darkbeigefellow">
     <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
     <form action="/action_page.php" target="_blank">
